// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrPage render should not render children if there is no page and NBR mode is false 1`] = `<DocumentFragment />`;

exports[`BrPage render should render children 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`BrPage render should render children if there is no page and NBR mode is true 1`] = `
<DocumentFragment>
  <div />
</DocumentFragment>
`;

exports[`BrPage render should render nothing if there is an error loading the page 1`] = `
<DocumentFragment>
  <div>
    fallback
  </div>
</DocumentFragment>
`;
